# backend/libraries/db-utilities/src/models/Auth/User/Role.enum.ts
@@ -1,20 +1,22 @@
-
-
 export enum Role {
-    Premium = "premium",
-    Basic = "basic"
+  Premium = 'premium',
+  Basic = 'basic'
 }
 
 export enum Access {
-    airline = "Airline",
-    retail = "Retail",
-    resturant = "Resturant",
-    rewardStore = "RewardStore"
+  airline = 'Airline',
+  retail = 'Retail',
+  resturant = 'Resturant',
+  rewardStore = 'RewardStore'
 }
 
 export enum RewardPercentage {
-   basicReward = 5,
-   premiumReward =10
+  basicReward = 5,
+  premiumReward = 10
 }
 
-
+export enum AuthStratagy {
+  jwt = 'JWT',
+  google = 'googleOAuth',
+  azure = 'azureOAUth'
+}
