# backend/libraries/db-utilities/src/models/Auth/User/user.model.ts
@@ -33,5 +33,8 @@ export class User {
   updatedAt?: Date;
 
   @ApiProperty()
-  isOAuth?:boolean;
+  isOAuth?: boolean;
+
+  @ApiProperty()
+  authStratagy: string;
 }
